added individual ticker profit/loss and swagger update
